@@ -1,4 +1,6 @@
+AUX 60-mikachan_o.conf 451 RMD160 3c7982fd41428b427a5b42be9c1cdbc4ae428c48 SHA1 2330edeeb1bf2ceae8161f70be35660bc7a0c369 SHA256 6a7121a499ced003f944767a8938530913c664d1038e422a3d7c62a526b3db09
 DIST mikachan-font-otf-9.1.tar.bz2 8702143 RMD160 774553b75e815c91c5e0ea191b230c57773c006c SHA1 a77fe0f887adfdea7f7dbab414b527e22ba36443 SHA256 f27cdce9155322a4b5d7ea56d5531c10ed7ef836819b415f74ddc7546e76eeea
-EBUILD mikachan-font-otf-9.1.ebuild 652 RMD160 3fa681483c33c960e1efbaa1eaf43edfdc8a9f56 SHA1 7204d56a2a9c53f33c158e1b6d9fe3850c838954 SHA256 1456d123490a0af04206abfb75b74013c5d1122fac4a46b5cf45fc44e0198f4c
-MISC ChangeLog 2287 RMD160 3bd60cbe65bd2f0611116b53ed9c48166dc2ff6a SHA1 36c712119e94dfa151dbc69ed3cfd2c4f951f807 SHA256 da3cbe9129d44e6191a4ebee20ea08368c362a229fa71e1981dad7d80e53c3cd
+EBUILD mikachan-font-otf-9.1-r1.ebuild 922 RMD160 15e4b275b4414df73b61aaf77d9ebdef1847e631 SHA1 98e1b359d72ea3ed0f796134ee1829ef60e11be1 SHA256 dc59c6174bae2b24fd017a466bcb7737ede65fc043d428eb4e1ecb9fa9e727f7
+EBUILD mikachan-font-otf-9.1.ebuild 653 RMD160 9270a0ff8875359a2b3cab2fe4a3e1d82577c6fe SHA1 ac6988638b7e271b906692d7a5da420e199cdbb2 SHA256 5549cfb0f36855fdf1d575f61eab6671686ff7603f28ee364dd915499c4e4f26
+MISC ChangeLog 2469 RMD160 f4ea9428f32a6e3e34d2f00c0013eef5b17c9847 SHA1 11be35827cd5db0d6efeb38e650a4d6056c4e47e SHA256 f57ba9c30082d660077c3a920a2c53234f8c28073064a7cd3c0e91bceed4def5
 MISC metadata.xml 192 RMD160 afed5e4dc1d6b8b21ba3b7fdd506162dd3cff5c8 SHA1 b803046bff5d46655dd18e09471f83b79c85289e SHA256 42ab1187e8cda888170945bcd3d56947fa775d02e01e57edc09e488ba4c5e3c4
