@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/mikachan-font-otf
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/mikachan-font-otf/ChangeLog,v 1.16 2007/01/22 20:57:09 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/mikachan-font-otf/ChangeLog,v 1.17 2009/02/21 13:49:00 lu_zero Exp $
+
+*mikachan-font-otf-9.1-r1 (21 Feb 2009)
+
+  21 Feb 2009; Luca Barbato <lu_zero@gentoo.org> +files/60-mikachan_o.conf,
+  +mikachan-font-otf-9.1-r1.ebuild:
+  Provide fontconfig override
 
   22 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
   mikachan-font-otf-9.1.ebuild:
